pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-invalid-address-root.ub
factory: {
  state-moves: [
    { from: 'core.thing@var.old', to: 'core.thing@resource.new' }
  ]
}
